[gd_scene load_steps=3 format=3 uid="uid://cb6x21y04q6ad"]

[ext_resource type="Script" path="res://Scripts/InputToJSON.gd" id="1_6677j"]
[ext_resource type="PackedScene" uid="uid://b7bqic52om3ph" path="res://Scenes/BackButton.tscn" id="2_p6jn3"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6677j")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.399494, 0.409995, 0.554444, 1)

[node name="Back" parent="Background" instance=ExtResource("2_p6jn3")]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.104
anchor_bottom = 0.049
offset_left = 3.0
offset_top = 1.0
offset_right = 0.192001
offset_bottom = 0.247999

[node name="InputScroll" type="ScrollContainer" parent="Background"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.002
anchor_top = 0.086
anchor_right = 0.49
anchor_bottom = 0.988
offset_left = -0.304
offset_top = 0.271999
offset_right = 4.52002
offset_bottom = -0.223999
horizontal_scroll_mode = 0

[node name="InputContainer" type="VBoxContainer" parent="Background/InputScroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 15

[node name="IDLabel" type="Label" parent="Background/InputScroll/InputContainer"]
layout_mode = 2
text = "This Entry's ID:"

[node name="IDInput" type="TextEdit" parent="Background/InputScroll/InputContainer"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "EX: InitialGreeting"

[node name="Name Instruction" type="Label" parent="Background/InputScroll/InputContainer"]
layout_mode = 2
text = "Character Name Goes Here:"
vertical_alignment = 1

[node name="Name Input" type="TextEdit" parent="Background/InputScroll/InputContainer"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "EX: John Jacob Jingleheimer Smith"

[node name="ExpressionInstruction" type="Label" parent="Background/InputScroll/InputContainer"]
layout_mode = 2
text = "Character Expression ID Goes Here:"
vertical_alignment = 1

[node name="ExpressionID" type="TextEdit" parent="Background/InputScroll/InputContainer"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "EX: Angry"

[node name="DialogueLabel" type="Label" parent="Background/InputScroll/InputContainer"]
layout_mode = 2
text = "Dialogue Goes Here:"

[node name="DialogueEntry" type="TextEdit" parent="Background/InputScroll/InputContainer"]
custom_minimum_size = Vector2(0, 140)
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "EX: His name is my name too!"

[node name="ProceedsToInstruction" type="Label" parent="Background/InputScroll/InputContainer"]
layout_mode = 2
text = "ID This Entry Will Proceed To:"

[node name="ProceedTo" type="TextEdit" parent="Background/InputScroll/InputContainer"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "EX: GreetingFollowUp"

[node name="AddDialogueOption" type="Button" parent="Background/InputScroll/InputContainer"]
layout_mode = 2
text = "Add Dialogue Option"

[node name="Confirm" type="Node" parent="Background"]

[node name="Buttons" type="VBoxContainer" parent="Background/Confirm"]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.059
anchor_right = 0.59
anchor_bottom = 0.16
offset_top = -0.232002
offset_right = 0.319946
offset_bottom = 0.319992

[node name="Add" type="Button" parent="Background/Confirm/Buttons"]
layout_mode = 2
text = "Add Entry"

[node name="Delete" type="Button" parent="Background/Confirm/Buttons"]
layout_mode = 2
text = "Delete Entry"

[node name="Output" type="VBoxContainer" parent="Background"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.628
anchor_right = 0.996
anchor_bottom = 0.997
offset_left = 0.543945
offset_right = -0.39209
offset_bottom = -0.0560303
grow_horizontal = 0

[node name="Label" type="Label" parent="Background/Output"]
layout_mode = 2
text = "Output"

[node name="CodeEdit" type="CodeEdit" parent="Background/Output"]
custom_minimum_size = Vector2(0, 500)
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "JSON will appear here as you add entries!"

[node name="Save" type="Button" parent="Background/Output"]
layout_mode = 2
text = "Save to JSON File"

[node name="Load" type="Button" parent="Background/Output"]
layout_mode = 2
text = "Load A Dialogue"

[node name="SaveFileDialog" type="FileDialog" parent="Background"]
position = Vector2i(300, 100)
size = Vector2i(500, 500)
ok_button_text = "Save"
access = 2
filters = PackedStringArray("*.txt", "*.json")

[node name="LoadFileDialog" type="FileDialog" parent="Background"]
title = "Open a File"
position = Vector2i(300, 100)
size = Vector2i(500, 500)
ok_button_text = "Open"
file_mode = 0
access = 2
filters = PackedStringArray("*.txt", "*.json")

[connection signal="confirmed" from="Background/SaveFileDialog" to="." method="_on_save_file_dialog_confirmed"]
[connection signal="file_selected" from="Background/SaveFileDialog" to="." method="_on_save_file_dialog_file_selected"]
[connection signal="confirmed" from="Background/LoadFileDialog" to="." method="_on_load_file_dialog_confirmed"]
[connection signal="file_selected" from="Background/LoadFileDialog" to="." method="_on_load_file_dialog_file_selected"]
